[package]
name = "sig_scanner"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bytemuck = "1.25.0"
log = "0.4.29"
windows-core = "0.62.2"
serde = { features = ["derive"], version = "1.0.228" }
serde_json = "1.0.149"

[dependencies.windows]
version = "0.62.2"
features = ["Win32", "Win32_System", "Win32_System_Console", "Win32_UI", "Win32_UI_Input", "Win32_UI_Input_KeyboardAndMouse", "Win32_System_Threading", "Win32_Security", "Win32_UI_WindowsAndMessaging", "Win32_System_LibraryLoader", "Win32_Storage", "Win32_Storage_FileSystem", "Win32_Graphics", "Win32_Graphics_Gdi", "Win32_Graphics_OpenGL", "Win32_System_Diagnostics", "Win32_System_Diagnostics_ToolHelp", "Win32_System_SystemServices"]

[dependencies.simple_logger]
version = "5.2.0"
default-features = false
features = ["colors"]
